# ARDA-autonomous-research-and-dev-agent

./: .gitignore  README.md
backend/: .env.example  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8dad7b03a269_initial_tasks_and_usage_logs.py
backend/app/: config.py  db.py  main.py  models.py  pricing.py  schemas.py  storage.py
backend/app/agents/: claude.py
backend/app/routes/: tasks.py  usage.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Layout.tsx  StatusBadge.tsx
frontend/src/hooks/: useLenis.ts
frontend/src/lib/: api.ts
frontend/src/pages/: DashboardPage.tsx  NewTaskPage.tsx  TaskDetailPage.tsx  TasksListPage.tsx
infra/: docker-compose.yml
